[package]
name = "basic-run"
version = "0.1.0"
edition = "2021"

[dependencies]
# event-subscriber = { path = "../../crates/event-subscriber" }
tokio-event-adapter = { path = "../../tokio-event-adapter" }
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.42.0", features = ["full"] }
